Update and add office images to gallery
- Resized office.jpg from 5712x4284 to 1920x1440
- Added new office1.jpg and resized from 4032x3024 to 1920x1440
- Added office1 to gallery after office in Additional Spaces section
- Updated data-index values for all subsequent gallery items (now 37 total)
- Added office1 alt text to all language translation files
- Rebuilt all language versions with updated gallery

--- a/de/index.html
+++ b/de/index.html
@@ -288,60 +288,64 @@
                     <img src="../images/office.jpg" alt="Büro" data-index="22">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
+                <div class="gallery-item" data-category="interior">
+                    <img src="../images/office1.jpg" alt="Office with Mezzanine" data-index="23">
+                    <div class="gallery-overlay">Bild ansehen</div>
+                </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/gym.jpg" alt="Fitnessraum" data-index="23">
+                    <img src="../images/gym.jpg" alt="Fitnessraum" data-index="24">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
 
                 <!-- Outdoor Living -->
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/outdoor.jpg" alt="Außenterrasse" data-index="24">
+                    <img src="../images/outdoor.jpg" alt="Außenterrasse" data-index="25">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/seating-area.jpg" alt="Sitzbereich im Freien" data-index="25">
+                    <img src="../images/seating-area.jpg" alt="Sitzbereich im Freien" data-index="26">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
 
                 <!-- More Garden Views -->
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden2.jpg" alt="Gartenwege" data-index="26">
+                    <img src="../images/garden2.jpg" alt="Gartenwege" data-index="27">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden3.jpg" alt="Gartenmerkmale" data-index="27">
+                    <img src="../images/garden3.jpg" alt="Gartenmerkmale" data-index="28">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden5.jpg" alt="Gepflegte Landschaftsgestaltung" data-index="28">
+                    <img src="../images/garden5.jpg" alt="Gepflegte Landschaftsgestaltung" data-index="29">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden6.jpg" alt="Gartenterrasse" data-index="29">
+                    <img src="../images/garden6.jpg" alt="Gartenterrasse" data-index="30">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden7.jpg" alt="Gartenansichten" data-index="30">
+                    <img src="../images/garden7.jpg" alt="Gartenansichten" data-index="31">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden8.jpg" alt="Gartengrundstück" data-index="31">
+                    <img src="../images/garden8.jpg" alt="Gartengrundstück" data-index="32">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden9.jpg" alt="Gartenbereich" data-index="32">
+                    <img src="../images/garden9.jpg" alt="Gartenbereich" data-index="33">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/wood.jpg" alt="Immobilienmerkmale" data-index="33">
+                    <img src="../images/wood.jpg" alt="Immobilienmerkmale" data-index="34">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/satellite-view.jpg" alt="Satellitenansicht der Immobilie" data-index="34">
+                    <img src="../images/satellite-view.jpg" alt="Satellitenansicht der Immobilie" data-index="35">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/floorplan.jpg" alt="Grundriss der Immobilie" data-index="35">
+                    <img src="../images/floorplan.jpg" alt="Grundriss der Immobilie" data-index="36">
                     <div class="gallery-overlay">Bild ansehen</div>
                 </div>
             </div>
