--- a/nl/index.html
+++ b/nl/index.html
@@ -288,60 +288,64 @@
                     <img src="../images/office.jpg" alt="Kantoorruimte" data-index="22">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
+                <div class="gallery-item" data-category="interior">
+                    <img src="../images/office1.jpg" alt="Office with Mezzanine" data-index="23">
+                    <div class="gallery-overlay">Bekijk afbeelding</div>
+                </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/gym.jpg" alt="Fitnessruimte" data-index="23">
+                    <img src="../images/gym.jpg" alt="Fitnessruimte" data-index="24">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
 
                 <!-- Outdoor Living -->
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/outdoor.jpg" alt="Buitenterras" data-index="24">
+                    <img src="../images/outdoor.jpg" alt="Buitenterras" data-index="25">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/seating-area.jpg" alt="Zithoek Buiten" data-index="25">
+                    <img src="../images/seating-area.jpg" alt="Zithoek Buiten" data-index="26">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
 
                 <!-- More Garden Views -->
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden2.jpg" alt="Tuinpaden" data-index="26">
+                    <img src="../images/garden2.jpg" alt="Tuinpaden" data-index="27">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden3.jpg" alt="Tuinelementen" data-index="27">
+                    <img src="../images/garden3.jpg" alt="Tuinelementen" data-index="28">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden5.jpg" alt="Volgroeide Beplanting" data-index="28">
+                    <img src="../images/garden5.jpg" alt="Volgroeide Beplanting" data-index="29">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden6.jpg" alt="Tuinterras" data-index="29">
+                    <img src="../images/garden6.jpg" alt="Tuinterras" data-index="30">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden7.jpg" alt="Uitzicht op de Tuin" data-index="30">
+                    <img src="../images/garden7.jpg" alt="Uitzicht op de Tuin" data-index="31">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden8.jpg" alt="Terrein van de Tuin" data-index="31">
+                    <img src="../images/garden8.jpg" alt="Terrein van de Tuin" data-index="32">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden9.jpg" alt="Tuingedeelte" data-index="32">
+                    <img src="../images/garden9.jpg" alt="Tuingedeelte" data-index="33">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/wood.jpg" alt="Kenmerken van de Woning" data-index="33">
+                    <img src="../images/wood.jpg" alt="Kenmerken van de Woning" data-index="34">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/satellite-view.jpg" alt="Satellietbeeld van de Woning" data-index="34">
+                    <img src="../images/satellite-view.jpg" alt="Satellietbeeld van de Woning" data-index="35">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/floorplan.jpg" alt="Plattegrond van de Woning" data-index="35">
+                    <img src="../images/floorplan.jpg" alt="Plattegrond van de Woning" data-index="36">
                     <div class="gallery-overlay">Bekijk afbeelding</div>
                 </div>
             </div>
