--- a/sv/index.html
+++ b/sv/index.html
@@ -288,60 +288,64 @@
                     <img src="../images/office.jpg" alt="Kontorsutrymme" data-index="22">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
+                <div class="gallery-item" data-category="interior">
+                    <img src="../images/office1.jpg" alt="Office with Mezzanine" data-index="23">
+                    <div class="gallery-overlay">Visa bild</div>
+                </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/gym.jpg" alt="Gymfacilitet" data-index="23">
+                    <img src="../images/gym.jpg" alt="Gymfacilitet" data-index="24">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
 
                 <!-- Outdoor Living -->
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/outdoor.jpg" alt="Uteplats" data-index="24">
+                    <img src="../images/outdoor.jpg" alt="Uteplats" data-index="25">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/seating-area.jpg" alt="Utesittplats" data-index="25">
+                    <img src="../images/seating-area.jpg" alt="Utesittplats" data-index="26">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
 
                 <!-- More Garden Views -->
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden2.jpg" alt="Trädgårdsgångar" data-index="26">
+                    <img src="../images/garden2.jpg" alt="Trädgårdsgångar" data-index="27">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden3.jpg" alt="Trädgårdsdetaljer" data-index="27">
+                    <img src="../images/garden3.jpg" alt="Trädgårdsdetaljer" data-index="28">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden5.jpg" alt="Mogen Landskapsarkitektur" data-index="28">
+                    <img src="../images/garden5.jpg" alt="Mogen Landskapsarkitektur" data-index="29">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden6.jpg" alt="Trädgårdsterrass" data-index="29">
+                    <img src="../images/garden6.jpg" alt="Trädgårdsterrass" data-index="30">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden7.jpg" alt="Trädgårdsutsikt" data-index="30">
+                    <img src="../images/garden7.jpg" alt="Trädgårdsutsikt" data-index="31">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden8.jpg" alt="Trädgårdsområde" data-index="31">
+                    <img src="../images/garden8.jpg" alt="Trädgårdsområde" data-index="32">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
                 <div class="gallery-item" data-category="gardens">
-                    <img src="../images/garden9.jpg" alt="Trädgårdsyta" data-index="32">
+                    <img src="../images/garden9.jpg" alt="Trädgårdsyta" data-index="33">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/wood.jpg" alt="Fastighetsfunktioner" data-index="33">
+                    <img src="../images/wood.jpg" alt="Fastighetsfunktioner" data-index="34">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/satellite-view.jpg" alt="Satellitvy över Fastigheten" data-index="34">
+                    <img src="../images/satellite-view.jpg" alt="Satellitvy över Fastigheten" data-index="35">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
                 <div class="gallery-item" data-category="exterior">
-                    <img src="../images/floorplan.jpg" alt="Fastighetsplanlösning" data-index="35">
+                    <img src="../images/floorplan.jpg" alt="Fastighetsplanlösning" data-index="36">
                     <div class="gallery-overlay">Visa bild</div>
                 </div>
             </div>
