--- a/pt/index.html
+++ b/pt/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Moradia de luxo T4 com piscina em Colinas Verdes, Lagos, Portugal - €1.045.000. Deslumbrante propriedade rural com jardins maduros, sauna e ginásio.">
     <title>Moradia de Luxo à Venda - Colinas Verdes, Lagos, Portugal | €1.045.000</title>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="00643849-5c2d-4e5b-9095-85fe1a7e3f48"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
