created a multilingual thank-you page following form submission

--- a/nl/index.html
+++ b/nl/index.html
@@ -531,7 +531,7 @@
                 </div>
 
                 <div class="contact-form-wrapper">
-                    <form id="contactForm" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="contact-form">
+                    <form id="contactForm" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html?lang=nl" class="contact-form">
                         <input type="hidden" name="form-name" value="contact">
                         <p class="hidden">
                             <label>Vul dit niet in als je een mens bent: <input name="bot-field"></label>
