--- a/en/index.html
+++ b/en/index.html
@@ -531,7 +531,7 @@
                 </div>
 
                 <div class="contact-form-wrapper">
-                    <form id="contactForm" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="contact-form">
+                    <form id="contactForm" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html?lang=en" class="contact-form">
                         <input type="hidden" name="form-name" value="contact">
                         <p class="hidden">
                             <label>Don't fill this out if you're human: <input name="bot-field"></label>
