--- a/sv/index.html
+++ b/sv/index.html
@@ -531,7 +531,7 @@
                 </div>
 
                 <div class="contact-form-wrapper">
-                    <form id="contactForm" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="contact-form">
+                    <form id="contactForm" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html?lang=sv" class="contact-form">
                         <input type="hidden" name="form-name" value="contact">
                         <p class="hidden">
                             <label>Fyll inte i detta om du är människa: <input name="bot-field"></label>
